myteo/test/analyze/type_check/int_literal_out_of_range.myte
module test

fun main() {
  // Not out of range
  0;
  1;

  // Max int is in range
  2147483647;
  0x7FFFFFFF;
  0b01111111111111111111111111111111;

  // Above max int is out of range
  2147483648;
  0x80000000;
  0b10000000000000000000000000000000;

  // Min int is in range
  -2147483648;
  -0x80000000;
  -0b10000000000000000000000000000000;

  // Below min int is out of range
  -2147483649;
  -0x80000001;
  -0b10000000000000000000000000000001;
}